removing port number prompt

--- a/template/clientapp/templates/app.jade
+++ b/template/clientapp/templates/app.jade
@@ -1,7 +1,7 @@
 .container
     .navbar
       .navbar-inner
-        a.brand(href="#") human.js - sample
+        a.brand(href="#") {{{appTitle}}}
         ul.nav
           li
             a(href="/") home
