adding references to module searches"

--- a/index.jade
+++ b/index.jade
@@ -141,3 +141,9 @@ main
     p HumanJS just uses Backbone's router so just <a href="http://backbonejs.org/#Router">see backbone's router docs for more info</a>.
 
     h2#moonboots Moonboots
+
+    h2#finding-modules Finding modules
+
+    p There's a site containing a curated list of npm-installable modules with a quick filter box: <a href="http://projects.joreteg.com/humanjs-resources/">humanjs-resources</a> that should help you find things you may need. 
+
+    p Also, there are lots of modules you can find via <a href="http://browserify.org/search">browserify's module search</a>.
