--- a/index.jade
+++ b/index.jade
@@ -162,7 +162,6 @@ html
             h3#view-initialize initialize
             
             h3#view-render render
-
             
             h3#view-render-and-bind renderAndBind
             p
@@ -206,8 +205,10 @@ html
             p
               | The <code>renderCollection()</code> call will maintain the collection within the <code>.itemContainer</code> element, including proper handling of add, remove, sort, reset, etc. You can optionally specify a filter function or choose to reverse the collection when rendering.
             
-            h3#view-renderCollection renderCollection
-            
+            h4#view-listen-to-and-run listenToAndRun
+
+            p 
+              | The same as Backbone's <code>listenTo()</code>, except it will call handler immediately after applying the listener.
 
             h3#view-bindings bindings
             p
