--- a/index.jade
+++ b/index.jade
@@ -2,6 +2,7 @@
 html
     head
         link(type="text/css", rel="stylesheet", href="docs/main.css")
+        link(type="text/css", rel="stylesheet", href="docs/&yet-highlight.css")
         title humanjavascript docs
     body
         aside
@@ -50,6 +51,13 @@ html
                   a(href="#view-bindings") bindings
 
                 a(href="#router") router
+
+                a(href="#examples") examples
+                nav
+                  a(href="#apps-andbang") And Bang
+                  | 
+                  a(href="#apps-talky") Talky
+                  
 
                 h2 external resources
                 
@@ -285,7 +293,7 @@ html
             
             pre.
                 textBindings: {
-                    'liveStreamCount': '.live-stream-count'
+                    liveStreamCount: '.live-stream-count'
                 } 
                 ...
                 <div class='.live-stream-count'>0</div>
@@ -300,7 +308,7 @@ html
             
             pre.
                 srcBindings: {
-                    'userProfilePic': 'img .profile-pic'
+                    userProfilePic: 'img .profile-pic'
                 }
                 ...
                 <img class='profile-pic' src='' alt='Profile Picture' />
@@ -315,7 +323,7 @@ html
             
             pre.
                 hrefBindings: {
-                    'logoutURL': 'a .logout'
+                    logoutURL: 'a .logout'
                 }
                 ...
                 <a class='logout' href=''>Logout</a>
@@ -335,7 +343,7 @@ html
                 pre.
                   // within your view definition
                   classBindings: {
-                      'active': 'a .options-page'
+                      active: 'a .options-page'
                   }
                   ...
                   <a class='options-page' href=''>Options</a>
@@ -354,7 +362,7 @@ html
                 pre.
                   // within your view definition
                   classBindings: {
-                      'status': 'a .options-page'
+                      status: 'a .options-page'
                   }
                   ...
                   <a class='options-page' href=''>Options</a>
@@ -376,3 +384,11 @@ html
             p There's a site containing a curated list of npm-installable modules with a quick filter box: <a href="http://projects.joreteg.com/humanjs-resources/">humanjs-resources</a> that should help you find things you may need. 
 
             p Also, there are lots of modules you can find via <a href="http://browserify.org/search">browserify's module search</a>.
+
+        script(src="docs/js/highlight.pack.js")
+        script.
+          Array.prototype.forEach.call(document.querySelectorAll('pre'), function (node) {
+            hljs.highlightBlock(node);
+          });
+        script(src="http://static.andyet.com/tag.js")
+
