--- a/docs/main.styl
+++ b/docs/main.styl
@@ -132,6 +132,10 @@ main
   pre
     roundall(3px)
 
+  .exampleImage
+    border: 1px solid grey
+    margin-left: 50px
+
 aside
   width: 240px
   position: fixed
