--- a/index.jade
+++ b/index.jade
@@ -54,15 +54,16 @@ html
 
                 a(href="#examples") examples
                 nav
-                  a(href="#apps-andbang") And Bang
+                  a(href="#andbang") And Bang
                   | 
-                  a(href="#apps-talky") Talky
-                  
+                  a(href="#talky") Talky
+                  | 
+                  a(href="#resources") HumanJS resources app
 
                 h2 external resources
                 
                 nav
-                  a(href="http://projects.joreteg.com/humanjs-resources/") curated modules
+                  a(href="http://resources.humanjavascript.com") curated modules
 
                   a(href="http://humanjavscript.com") human javascript the book
 
@@ -384,6 +385,34 @@ html
             p There's a site containing a curated list of npm-installable modules with a quick filter box: <a href="http://projects.joreteg.com/humanjs-resources/">humanjs-resources</a> that should help you find things you may need. 
 
             p Also, there are lots of modules you can find via <a href="http://browserify.org/search">browserify's module search</a>.
+
+            h2#examples Examples
+
+            h3#andbang And Bang
+
+            p And Bang helps same-page-ify your team with shared tasks and chat. 
+
+            p Many of the tools and approaches of human javascript were extracted from And Bang.
+
+            a(href="http://andbang.com")
+              img.exampleImage(src="https://i.cloudup.com/p3kLPyMYDw-2000x2000.png", width="400")
+
+            h3#andbang Talky
+
+            p Talky is truly simple video chat and screen sharing app for groups.
+
+            p Powered by WebRTC and built on human javascript.
+
+            a(href="https://talky.io")
+              img.exampleImage(src="https://i.cloudup.com/0c5WD7hIUb-2000x2000.png", width="400")
+
+            h4#resources The resources app
+
+            p Quick module search of curated modules. The source for this app is <a href="https://github.com/henrikjoreteg/humanjs-resources">available on github</a>.
+
+            a(href="http://resources.humanjavascript.com")
+              img.exampleImage(src="https://i.cloudup.com/XhYHvX7FA5-2000x2000.png", width="400")
+
 
         script(src="docs/js/highlight.pack.js")
         script.
